<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/anonymous"
            />
        <TextView
            android:id="@+id/name"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="Имя пользователя"/>
        <TextView
            android:id="@+id/bday"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/bday"/>
        <TextView
            android:id="@+id/email"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/phone"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/phone"/>

    </LinearLayout>
</ScrollView>