<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alextinekov.socialcontacts.MainActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/vk_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vk_login"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/vk_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_connection_check"
            android:visibility="visible"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/fb_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_connection_check"
            android:visibility="visible"/>
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/next_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>
